crates/openracing-filters/tests/snapshots/snapshot_filters__bumpstop_sine_input_snapshot.snap
---
source: crates/openracing-filters/tests/snapshot_filters.rs
expression: collect_rounded(&outputs)
---
[
    0.0,
    -677.7824707,
    -1294.56542969,
    -1795.7532959,
    -2136.57641602,
    -2286.59033203,
    -2232.39453125,
    -1978.83007813,
    -1548.54760742,
    -979.98254395,
    -323.92324829,
    361.02694702,
    1013.68249512,
    1575.74438477,
    1997.00500488,
    2239.83447266,
    2282.54125977,
    2121.31079102,
    1770.5456543,
    1261.57775879,
    0.0,
    0.0,
    -714.50115967,
    -1326.18652344,
    -1819.45336914,
    -2150.23803711,
    -2288.99291992,
    -2223.32348633,
    -1959.09594727,
    -1519.91247559,
    -945.00604248,
    -285.7281189,
    399.02841187,
    1048.09631348,
    1603.49597168,
    2015.61437988,
    2247.640625,
    2278.84692383,
    2106.4453125,
    1745.83691406,
]
