crates/openracing-filters/tests/snapshots/snapshot_filters__bumpstop_step_response_snapshot.snap
---
source: crates/openracing-filters/tests/snapshot_filters.rs
expression: collect_rounded(&outputs)
---
[
    -8595.16699219,
    -8595.16699219,
    -8595.16699219,
    -8595.16699219,
    -8595.16699219,
    -8595.16699219,
    -8595.16699219,
    -8595.16699219,
    -8595.16699219,
    -8595.16699219,
    -8595.16699219,
    -8595.16699219,
    -8595.16699219,
    -8595.16699219,
    -8595.16699219,
    -8595.16699219,
    -8595.16699219,
    -8595.16699219,
    -8595.16699219,
    -8595.16699219,
    -8595.16699219,
    -8595.16699219,
    -8595.16699219,
    -8595.16699219,
    -8595.16699219,
    -8595.16699219,
    -8595.16699219,
    -8595.16699219,
    -8595.16699219,
    -8595.16699219,
]
