crates/openracing-filters/tests/snapshots/snapshot_filters__damper_adaptive_ramp_snapshot.snap
---
source: crates/openracing-filters/tests/snapshot_filters.rs
expression: collect_rounded(&outputs)
---
[
    0.0,
    -0.11000001,
    -0.24000001,
    -0.38999999,
    -0.56,
    -0.75,
    -0.90000004,
    -1.05000007,
    -1.20000005,
    -1.35000002,
    -1.5,
    -1.6500001,
    -1.80000007,
    -1.95000005,
    -2.10000014,
    -2.25,
    -2.4000001,
    -2.55000019,
    -2.70000005,
    -2.85000014,
]
