crates/openracing-filters/tests/snapshots/snapshot_filters__damper_adaptive_step_response_snapshot.snap
---
source: crates/openracing-filters/tests/snapshot_filters.rs
expression: collect_rounded(&outputs)
---
[
    0.0,
    0.0,
    0.0,
    0.0,
    0.0,
    -1.125,
    -1.125,
    -1.125,
    -1.125,
    -1.125,
    -1.125,
    -1.125,
    -1.125,
    -1.125,
    -1.125,
    -1.125,
    -1.125,
    -1.125,
    -1.125,
    -1.125,
]
