crates/openracing-filters/tests/snapshots/snapshot_filters__damper_fixed_ramp_snapshot.snap
---
source: crates/openracing-filters/tests/snapshot_filters.rs
expression: collect_rounded(&outputs)
---
[
    0.0,
    -0.1,
    -0.2,
    -0.30000001,
    -0.40000001,
    -0.5,
    -0.60000002,
    -0.69999999,
    -0.80000001,
    -0.90000004,
    -1.0,
    -1.10000002,
    -1.20000005,
    -1.30000007,
    -1.39999998,
    -1.5,
    -1.60000002,
    -1.70000005,
    -1.80000007,
    -1.89999998,
]
