crates/openracing-filters/tests/snapshots/snapshot_filters__damper_fixed_step_response_snapshot.snap
---
source: crates/openracing-filters/tests/snapshot_filters.rs
expression: collect_rounded(&outputs)
---
[
    0.0,
    0.0,
    0.0,
    0.0,
    0.0,
    -0.75,
    -0.75,
    -0.75,
    -0.75,
    -0.75,
    -0.75,
    -0.75,
    -0.75,
    -0.75,
    -0.75,
    -0.75,
    -0.75,
    -0.75,
    -0.75,
    -0.75,
]
