crates/openracing-filters/tests/snapshots/snapshot_filters__friction_adaptive_ramp_snapshot.snap
---
source: crates/openracing-filters/tests/snapshot_filters.rs
expression: collect_rounded(&outputs)
---
[
    0.0,
    -0.19,
    -0.17999999,
    -0.17,
    -0.16000001,
    -0.15000001,
    -0.14,
    -0.13,
    -0.12,
    -0.10999999,
    -0.1,
    -0.09,
    -0.08,
    -0.06999999,
    -0.06,
    -0.05,
    -0.04,
    -0.04,
    -0.04,
    -0.04,
]
