crates/openracing-filters/tests/snapshots/snapshot_filters__friction_sine_snapshot.snap
---
source: crates/openracing-filters/tests/snapshot_filters.rs
expression: collect_rounded(&outputs)
---
[
    0.0,
    -0.1,
    -0.1,
    -0.1,
    -0.1,
    -0.1,
    -0.1,
    -0.1,
    -0.1,
    -0.1,
    -0.1,
    -0.1,
    -0.1,
    -0.1,
    -0.1,
    -0.1,
    0.1,
    0.1,
    0.1,
    0.1,
    0.1,
    0.1,
    0.1,
    0.1,
    0.1,
    0.1,
    0.1,
    0.1,
    0.1,
    0.1,
]
