crates/openracing-filters/tests/snapshots/snapshot_filters__hands_off_step_on_off_snapshot.snap
---
source: crates/openracing-filters/tests/snapshot_filters.rs
expression: results
---
[
    false,
    false,
    false,
    false,
    false,
    false,
    false,
    false,
    false,
    false,
    false,
    false,
    false,
    false,
    false,
    false,
    false,
    false,
    false,
    false,
    false,
    false,
    false,
    false,
    false,
    false,
    false,
    false,
    false,
    false,
    true,
    true,
    true,
    true,
    true,
    true,
    true,
    true,
    true,
    true,
]
